style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

:root {
  --headline-color: white;
  --background-color: #cfcfcf;
  --text-color: rgba(0, 0, 0, 0.5);
}

html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  background-color: var(--background-color);
  font-family: "Open Sans", sans-serif;
  color: var(--text-color);
  text-align: center;
  touch-action: none;
}

#currentSlide {
  user-select: none;
  position: fixed;
  left: 2%;
  top: 4%;
}

.main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.canvas-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
}

.grabbable {
  cursor: move; /* fallback if grab cursor is unsupported */
  cursor: grab;
  cursor: -moz-grab;
  cursor: -webkit-grab;
}
.grabbable:active {
  cursor: grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit-grabbing;
}

h1 {
  user-select: none;
  margin-bottom: 0;
  z-index: 1000;
  position: absolute;
  display: flex;
  color: rgba(255, 255, 255, 0.4);
}

.text-container {
  user-select: none;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  top: 95.5%;
  width: 50%;
  left: 25%;

  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 100));
  animation: fade-in 1s ease-in-out forwards;
}

.title {
  position: absolute;
  display: flex;

  top: 5%;

  z-index: 1000;
  user-select: none;
  font-size: 0.5rem;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 0.3rem;
  font-weight: 500;
  color: rgba(255, 255, 255, 0.4);
}

.socials {
  user-select: none;
  color: white;
}

.socials svg {
  color: rgba(255, 255, 255, 0.4);
  margin: 0 5px;
  transition: all 0.2s ease-in-out;
  transform: scale(1);
}

.socials svg:hover {
  transform: scale(1.5);
  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 1));
  color: #000;
}

p {
  user-select: none;
  width: 300px;
  font-size: 0.75rem;
}

a {
  user-select: none;
  color: rgba(0, 0, 0, 0.5);
  text-decoration: none;
  transition: all 0.5s ease-in-out;
}

